Moved styling to css file and fixed button squashing

--- a/src/css/filters.module.css
+++ b/src/css/filters.module.css
@@ -25,8 +25,45 @@
     font-size: 14px;
 }
 
+.precautionBlock {
+    margin-bottom: 20px;
+    align-items: center;
+}
+
 .expandButton {
     display: inline;
     line-height: 30px;
-    padding: 0 8px 8px 8px !important;
+    margin-top: -6px !important;
+}
+
+.crowdSize {
+    margin-bottom: 40px !important;
+}
+
+.roomOutlined {
+    color: #318AD0;
+    margin-bottom: -3px;
+    font-size: larger;
+}
+
+.peopleAltOutlined {
+    color: #318AD0 !important;
+    margin-bottom: -3px !important;
+    font-size: larger;
+}
+
+.shieldOutlined {
+    color: #318AD0;
+    margin-bottom: -4px;
+    margin-right: 3px;
+    font-size: larger;
+}
+
+.expandOutlined {
+    color: #6C787F;
+    margin-bottom: -5px;
+}
+
+.iconBlocks {
+    display: block;
 }
